New spec for trainer, all work except deletion by id or all
